--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
-kotlin.code.style=official
+kotlin.code.style = official
 
-kotlinVersion=1.8.20
+kotlinVersion        = 1.8.20
+serializationVersion = 1.5.0
+openapiVersion       = 6.5.0
+datetimeVersion      = 0.4.0
