--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,6 @@ kotlinVersion        = 1.8.20
 serializationVersion = 1.5.0
 openapiVersion       = 6.5.0
 datetimeVersion      = 0.4.0
+coroutinesVersion    = 1.6.4
+ktorVersion          = 2.3.0
+logbackVersion       = 1.3.5
