--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,7 @@ datetimeVersion      = 0.4.0
 coroutinesVersion    = 1.6.4
 ktorVersion          = 2.3.0
 logbackVersion       = 1.3.5
+
+testcontainersVersion   = 1.17.6
+kotestVersion           = 5.5.5
+kotlinLoggingJvmVersion = 3.0.5
