--- a/acceptance-tests/docker-compose/kafka/docker-compose-kafka.yml
+++ b/acceptance-tests/docker-compose/kafka/docker-compose-kafka.yml
@@ -57,7 +57,7 @@ services:
       - app-tier
 
   app-kafka:
-    image: ok-marketplace-app-kafka:latest
+    image: tagger-app-kafka:latest
     depends_on:
       kafka:
         condition: service_healthy
