--- a/acceptance-tests/docker-compose/ktor/docker-compose-ktor.yml
+++ b/acceptance-tests/docker-compose/ktor/docker-compose-ktor.yml
@@ -1,8 +1,8 @@
-# Конфигурация для spring + (в перспективе) postgresql
+# Конфигурация для ktor + (в перспективе) postgresql
 
 version: '3'
 services:
   app-ktor:
-    image: ok-marketplace-app-ktor-ktor:1.0-SNAPSHOT
+    image: tagger-app-ktor-ktor:0.0.1-SNAPSHOT
     ports:
       - "8080:8080"
