--- a/acceptance-tests/docker-compose/rabbit/docker-compose-rabbit.yml
+++ b/acceptance-tests/docker-compose/rabbit/docker-compose-rabbit.yml
@@ -3,7 +3,7 @@
 version: '3'
 services:
   app-rabbit:
-    image: ok-marketplace-app-rabbit:latest
+    image: tagger-app-rabbit:latest
     depends_on:
       rabbit:
         condition: service_healthy
