--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,12 @@ openapiVersion       = 6.5.0
 datetimeVersion      = 0.4.0
 coroutinesVersion    = 1.6.4
 ktorVersion          = 2.3.0
-logbackVersion       = 1.3.5
 
 testcontainersVersion   = 1.17.6
 kotestVersion           = 5.5.5
+
 kotlinLoggingJvmVersion = 3.0.5
+logbackVersion          = 1.4.6
+logbackEncoderVersion   = 7.3
+kermitLoggerVersion     = 2.0.0-RC3
+janinoVersion           = 3.1.9
