--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ logbackVersion          = 1.4.6
 logbackEncoderVersion   = 7.3
 kermitLoggerVersion     = 2.0.0-RC3
 janinoVersion           = 3.1.9
+
+cache4kVersion = 0.11.0
+kmpUUIDVersion = 0.7.0
