Начата реализация sql/jdbc хранилища. С тестами на postgresql

--- a/specs/specs-v1.yaml
+++ b/specs/specs-v1.yaml
@@ -448,6 +448,8 @@ components:
       properties:
         id:
           $ref: '#/components/schemas/ObjId'
+        lock:
+          $ref: '#/components/schemas/Lock'
         tags:
           type: array
           items:
