--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,8 @@ logbackEncoderVersion   = 7.3
 kermitLoggerVersion     = 2.0.0-RC3
 janinoVersion           = 3.1.9
 
-cache4kVersion = 0.11.0
 kmpUUIDVersion = 0.7.0
+
+cache4kVersion        = 0.11.0
+postgresDriverVersion = 42.6.0
+exposedVersion        = 0.41.1
