--- a/tagger-app-ktor/src/jvmMain/resources/application.conf
+++ b/tagger-app-ktor/src/jvmMain/resources/application.conf
@@ -8,3 +8,14 @@ ktor {
     modules = [site.geniyz.otus.app.ApplicationJvmKt.moduleJvm]
   }
 }
+
+sql {
+    url      = "jdbc:postgresql://localhost:5432/otus"
+    url      = ${?SQL_URL}
+    user     = "postgres"
+    user     = ${?SQL_USER}
+    password = "pass"
+    password = ${?SQL_PASS}
+    schema   = "otus"
+    schema   = ${?SQL_SCHEMA}
+}
