начата работа над авторизацией

--- a/tagger-app-ktor/src/commonMain/resources/application.conf
+++ b/tagger-app-ktor/src/commonMain/resources/application.conf
@@ -11,3 +11,11 @@ ktor {
   }
 
 }
+
+jwt {
+  secret   = "Secret"
+  issuer   = "Issuer"
+  realm    = "Realm"
+  audience = "tagger-users"
+  clientId = "tagger"
+}
