--- a/tagger-app-ktor/src/jvmMain/resources/application.conf
+++ b/tagger-app-ktor/src/jvmMain/resources/application.conf
@@ -19,3 +19,11 @@ sql {
     schema   = "otus"
     schema   = ${?SQL_SCHEMA}
 }
+
+jwt {
+  secret   = "Secret"
+  issuer   = "Issuer"
+  realm    = "Realm"
+  audience = "tagger-users"
+  clientId = "Tagger"
+}
