--- a/tagger-app-ktor/src/jvmMain/resources/application.conf
+++ b/tagger-app-ktor/src/jvmMain/resources/application.conf
@@ -21,9 +21,16 @@ sql {
 }
 
 jwt {
-  secret   = "Secret"
-  issuer   = "Issuer"
-  realm    = "Realm"
+  secret   = "Key-active-Kid-by-HS256"
+  secret   = ${?JWT_SECRET}
+  certUrl  = "http://localhost:8081/auth/realms/otus/protocol/openid-connect/certs"
+  certUrl  = ${?JWT_CERTURL}
+  issuer   = "http://localhost:8081/auth/realms/otus"
+  issuer   = ${?JWT_ISSUER}
+  realm    = "otus"
+  realm    = ${?JWT_REALM}
   audience = "tagger-users"
-  clientId = "Tagger"
+  audience = ${?JWT_AUDIENCE}
+  clientId = "TaggerApp"
+  clientId = ${?JWT_CLIENTID}
 }
