--- a/tagger-app-ktor/src/commonMain/resources/application.conf
+++ b/tagger-app-ktor/src/commonMain/resources/application.conf
@@ -10,6 +10,8 @@ ktor {
     modules = [site.geniyz.otus.app.ApplicationKt.module]
   }
 
+  urls = ["http://0.0.0.0:3000/", "http://127.0.0.1:3000/", "http://localhost:3000/", "http://0.0.0.0:8088/", "http://127.0.0.1:8088/", "http://localhost:8088/"]
+
 }
 
 jwt {
