--- a/tagger-app-ktor/src/jvmMain/resources/application.conf
+++ b/tagger-app-ktor/src/jvmMain/resources/application.conf
@@ -7,6 +7,8 @@ ktor {
   application {
     modules = [site.geniyz.otus.app.ApplicationJvmKt.moduleJvm]
   }
+  urls = ["http://0.0.0.0:3000/", "http://127.0.0.1:3000/", "http://localhost:3000/", "http://0.0.0.0:8088/", "http://127.0.0.1:8088/", "http://localhost:8088/"]
+
 }
 
 sql {
